package ti02.robotica.Models;

import java.awt.image.BufferedImage;
import java.util.List;

public class Picture {
    private BufferedImage picture;
    private List<Object> objects;

    public void FindObjects() {



    }

}
