@startuml

skinparam {
    classAttributeIconSize 0
    'shadowing false
    'handwritten true
    'monospace reverse
}

class MMSorter {

}

class Object {
    - Properties : Map<String, DetectorResult>
'    - Bounds : Bounds
    - Pixels : int[][]
    + RunDetectors()
}

class Bounds {
    - North : int
    - East : int
    - South : int
    - West : int
}

enum Color {
    RED
    GREEN
    YELLOW
    BROWN
    BLUE
}

class Picture {
    - Picture : BufferedImage
    + RunDetectors()
}

class HardwareController {
    + rotateCarousel() : void
    + openGate(n) : void
    + closeGate(n) : void
}

interface Detector {
    detect() : DetectorResult
}

'interface PictureDetector implements Detector {
'
'}

'interface ObjectDetector implements Detector {
'
'}

class MMDetector implements Detector {
    + detect() : DetectorResult<List<Object>>
}

class ColorDetector implements Detector {
    + detect() : DetectorResult<Color>
}

'class BoundsDetector implements Detector {
'    + detect() : DetectorResult<Bounds>
'}

class DetectorResult<T> {
    - Result : T
}

MMSorter "1" -- "2" Detector
MMSorter "1" -- "1" Picture
MMSorter "1" -- "1" HardwareController

'Picture --* Camera

'Picture "1" -- "*" Detector
Picture "1" -- "*" Object

'Object "1" --* Bounds
'Object "1" --* Color

@enduml
